fix logo on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #5f632d;
   font-family: 'Lato', sans-serif;
   display: flex;
@@ -60,6 +60,11 @@
 
 @media only screen and (max-width: 768px) {
   .calculator-container {
-    min-width: 300px;
+    min-width: 310px;
+    margin: 10px;
+  }
+
+  .github-logo-container {
+    position: relative;
   }
 }
